--- a/themes/sosnpr/sass/scss_pages/_home.scss
+++ b/themes/sosnpr/sass/scss_pages/_home.scss
@@ -7,7 +7,6 @@
       background-repeat: no-repeat;
       background-position: 0 60%;
       height: 85vh;
-      font-family: $miriam;
       margin-bottom: 70px;
       padding-top: 60px;
       @include tablet {
@@ -15,9 +14,8 @@
       }
       h2 {
         text-align: center;
-        font-size: 30px;
+        @include mobile-title;
         padding-top: 50px;
-        color: #285817;
         text-transform: uppercase;
         @include tablet {
           font-size: 40px;
